--- a/index.html
+++ b/index.html
@@ -115,7 +115,42 @@
                 </div>
             </div>
         </nav>
-
+        <div class="jumbotron"></div> <!-- Emplacement pour le contenu principal de la page -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h2>Étudiante du CNED</h2>
+                        <p>""
+                        </p>
+                        <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
+                              role="button">En savoir plus »</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>Le BTS SIO</h2>
+                        <p>""
+                        </p>
+                        <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_tec
+                              hnicien_supérieur_-_Services_informatiques_aux_organisations"
+                              target="_blank" role="button">En savoir plus »</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>Option B SLAM</h2>
+                        <p>""
+                        </p>
+                        <p><a class="btn btn-secondary" href="https://www.onisep.fr/Ressources/Univers-Fo
+                              rmation/Formations/Post-bac/bts-services-informatiques-aux-organisations-op
+                              tion-b-solutions-logicielles-et-applications-metiers" target="_blank"
+                              role="button">En savoir plus »</a>
+                        </p>
+                    </div>
+                </div>
+                <hr>
+                <p class="text-center" id="copyright">© Arthur DEMOISSON 2022</p>
+            </div>
+        </footer>
 
         <!-- Optional JavaScript; choose one of the two! -->
 
