--- a/pages/cv.html
+++ b/pages/cv.html
@@ -120,10 +120,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <div class="row cadreCV">
                     <div id="cv-entete" class="text-center">
                         <div id="cv-photo">
-                            <img src="../images/cv/AmeliaPilou.jpg" alt="Ma photo d'identité">
+                            <img src="../images/cv/" alt="Ma photo d'identité">
                         </div>
                         <div id="cv-intro">
-                            <h1>Bonjour, je m'appelle <span>Amélia</span> et voici mon CV</h1>
+                            <h1>Bonjour, je m'appelle <span>Arthur</span> et voici mon CV</h1>
                         </div>
                     </div>
 
@@ -131,11 +131,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         <!-- Partie gauche -->
                         <div class="rubrique clearfix">
                             <h2><span class="fa fa-comment"></span> En quelques mots...</h2>
-                            <p>J'ai 21 ans, j'habite Toulon et je suis passionnée d'informatique et de
-                                nouvelles technologies depuis mon plus jeune âge. Je suis actuellement un
-                                BTS Services Informatiques aux Organisations ce qui m'a décidé à aller au
-                                delà de la passion, afin de faire de l'informatique et plus particulièrement
-                                du développement d'applications, mon métier&nbsp;!
+                            <p>J'ai 19 ans, je réside à Toulon et je suis passionné d'informatique depuis petit, actuelement en BTS SIO j'espere pouvoir faire de ma passion un métier &nbsp;!
                             </p>
                         </div>
                         <div class="rubrique clearfix">
@@ -157,10 +153,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                                         <span class="fa fa-stop-circle"></span>&nbsp;2020
                                     </div>
                                     <div class="details float-right">
-                                        <h3>Bac STI2D spécialité SIN</h3>
-                                        <p>Baccalauréat "Sciences et Technologies de l'Industrie et du
-                                            Développement Durable" spécialité "Systèmes d’Information et
-                                            Numérique"</p>
+                                        <h3>Bac Génerale option</h3>
+                                        <p>Baccalauréat "Sciences" avec option Mathématiques, PhysiqueChime, et MathsExperte</p>
                                     </div>
                                 </li>
                                 <li>
@@ -178,41 +172,28 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                             <h2><span class="fa fa-briefcase"></span> Expériences professionnelles</h2>
                             <div class="experience clearfix">
                                 <div class="col-3">
-                                    <div class="lieu">Dev'in Love</div>
-                                    <div class="date">2022 (7 sem.)</div>
+                                    <div class="lieu">CarrefourMarket</div>
+                                    <div class="date">2022 (4 mois et demi)</div>
                                 </div>
                                 <div class="col-9">
-                                    <div class="profession">Developpement PHP Symfony 5</div>
-                                    <div class="details">Création/mise en œuvre de bundles, création de services,
-                                        création de commandes, respect de l'architecture MVC, création de templates
-                                        avec Twig, gestion de la persistance avec Doctrine.
+                                    <div class="profession">Employé polivalent </div>
+                                    <div class="details">Mise en service des rayons et des produits, employé de caisse,cette experience ma permi a surmonter ma timidité.
                                     </div>
                                 </div>
                             </div>
                             <div class="experience clearfix">
                                 <div class="col-3">
-                                    <div class="lieu">SCA Info</div>
-                                    <div class="date">2021 (6 sem.)</div>
+                                    <div class="lieu">Creagiciel</div>
+                                    <div class="date">2018 (2 semaines)</div>
                                 </div>
                                 <div class="col-9">
-                                    <div class="profession">Développement JEE</div>
-                                    <div class="details">Création/mise en oeuvre d'EJB (Entreprise Java Beans),
-                                        persistance des données avec JPA, mise en oeuvre du framework MVC JSF
-                                        (JavaServer Faces), création de composants graphique avec RichFaces.
+                                    <div class="profession">Stage Observation</div>
+                                    <div class="details">Observation du métier de développer en Informatique.
                                     </div>
                                 </div>
                             </div>
                             <div class="experience clearfix">
-                                <div class="col-3">
-                                    <div class="lieu">SCA Info</div>
-                                    <div class="date">2020<br>(à distance)</div>
-                                </div>
-                                <div class="col-9">
-                                    <div class="profession">Intégration avec Boostrap</div>
-                                    <div class="details">Création d'un site vitrine pour présenter l'entreprise et
-                                        ses différents projets. Problématique de RWD (Responsive Web Design),
-                                        optimisation des contenus, tests multisupports.
-                                    </div>
+                                <div class="col-3">                                  
                                 </div>
                             </div>
                         </div>
